--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -202,10 +202,10 @@
     "betaTermsLink": "Ver condiciones",
     "acceptBetaLabel": "Acepto las condiciones de uso beta",
     "betaConditionsTitle": "Condiciones de uso beta",
-    "betaCondition1": "La plataforma puede cambiar, actualizarse o presentar incidencias propias de una etapa beta.",
+    "betaCondition1": "Durante la etapa beta, la plataforma puede cambiar, actualizarse o presentar fallas temporales mientras seguimos mejorándola.",
     "betaCondition2": "No se realizan cobros ni emisión de boletas durante la beta.",
-    "betaCondition3": "Hasta el 28 de febrero de 2026 todas las cuentas tienen Plan Estándar gratis, incluyendo mejoras liberadas.",
-    "betaCondition4": "Desde marzo 2026 se habilitará el pago por suscripción; avisaremos y podrás decidir si continuar.",
+    "betaCondition3": "Cuando se habiliten los pagos por suscripción, te avisaremos con anticipación y podrás decidir si continuar.",
+    "betaCondition4": "Tu información es tuya: no la vendemos ni la compartimos con terceros. Solo la usamos para operar pymerp.cl y la protegemos con medidas de seguridad.",
     "betaCondition5": "La información publicada (textos, imágenes, precios, horarios) es responsabilidad de cada usuario.",
     "submitButton": "Enviar solicitud",
     "alreadyAccount": "¿Ya tienes cuenta?",
@@ -427,6 +427,16 @@
     "available": "disponibles",
     "outOfStock": "Agotado",
     "contactViaWhatsApp": "Contactar por WhatsApp",
+    "mobileMenu": {
+      "title": "Menú",
+      "about": "Acerca de",
+      "services": "Servicios",
+      "products": "Productos",
+      "hours": "Horario",
+      "location": "Ubicación",
+      "media": "Video",
+      "contact": "Contacto"
+    },
     "layouts": {
       "cta": {
         "services": "Reservar o escribir por WhatsApp",
@@ -717,6 +727,8 @@
       "cartCta": "Carrito ({{count}})",
       "menuKicker": "Menú destacado",
       "menuTitle": "Carta de {{name}}",
+      "productsSectionTitle": "Productos",
+      "menuFilterAll": "Todos",
       "menuSubtitle": "Elige una categoría o desplázate para ver todo el menú.",
       "productsTab": "Productos",
       "servicesTab": "Servicios",
