Add: Layout para construcción industrial y mejoras en traducciones

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -347,6 +347,7 @@
       "title": "Business type",
       "subtitle": "What do you offer?",
       "services": "Services",
+      "projects": "Projects",
       "products": "Products",
       "both": "Both",
       "servicesDesc": "You offer services like hair salon, consulting, etc.",
@@ -582,6 +583,122 @@
         "visitType": "Site visit"
       },
       "cityFallback": "your area"
+    },
+    "constructionIndustrial": {
+      "heroKicker": "Industrial / Works",
+      "heroTitleElectrical": "Electrical solutions for works, industry and agriculture",
+      "heroTitleGeneral": "Solutions for works and field maintenance",
+      "heroSubtitle": "{{service}} · {{region}}",
+      "heroSubtitleService": "Technical services",
+      "coverageFallback": "Coverage to be coordinated",
+      "badge": {
+        "response": "Response < 24h",
+        "onSite": "On-site technical visit",
+        "compliance": "Regulatory compliance"
+      },
+      "heroCtaPrimary": "Request technical visit",
+      "heroCtaSecondary": "Quote via WhatsApp",
+      "heroCard": {
+        "title": "Quick technical sheet",
+        "clients": "Client type",
+        "clientsValue": "Industrial · Commercial · Works",
+        "coverage": "Coverage",
+        "response": "Response time",
+        "responseValue": "Less than 24h",
+        "services": "Active services",
+        "attention": "Attention",
+        "attentionValue": "Prior coordination",
+        "aboutCta": "View description",
+        "missionCta": "View mission and vision"
+      },
+      "header": {
+        "whatsapp": "WhatsApp"
+      },
+      "nav": {
+        "services": "Services",
+        "projects": "Projects",
+        "coverage": "Coverage",
+        "quote": "Quote"
+      },
+      "trust": {
+        "safety": "Safety and quality",
+        "field": "Field execution",
+        "planning": "Technical planning",
+        "warranty": "Warranty and support"
+      },
+      "servicesKicker": "Specialties",
+      "servicesTitle": "Technical specialties",
+      "servicesSubtitle": "New works, maintenance or emergencies. We coordinate field crews.",
+      "servicesCta": "Request technical visit",
+      "servicesMiniCta": "Quote",
+      "processKicker": "Process",
+      "processTitle": "How we work",
+      "process": {
+        "step1": "1. Survey / technical visit",
+        "step2": "2. Quote and planning",
+        "step3": "3. Safe execution",
+        "step4": "4. Delivery and support"
+      },
+      "projectsKicker": "Projects",
+      "projectsTitle": "Completed projects",
+      "projectsSubtitle": "Recent works with safe delivery and technical support.",
+      "projectsCta": "Request technical visit",
+      "projectsEmpty": "Schedule a technical visit to review needs and upcoming projects.",
+      "projectAlt": "Field project",
+      "projectType": "Industrial work",
+      "projectResult": "Safe delivery",
+      "coverageKicker": "Coverage",
+      "coverageTitle": "Coverage and location",
+      "coverageSubtitle": "We attend sites and facilities with prior coordination.",
+      "coverageNote": "We coordinate access, safety and field planning.",
+      "coverageMapFallback": "Map available upon coordination.",
+      "coverageChip1": "Industrial",
+      "coverageChip2": "Commercial",
+      "coverageChip3": "Works",
+      "formKicker": "Quote",
+      "formTitle": "Coordinate your work or technical visit",
+      "formSubtitle": "We respond in less than 24 hours.",
+      "form": {
+        "name": "Full name",
+        "namePlaceholder": "e.g., Carla Ramirez",
+        "phone": "WhatsApp",
+        "phonePlaceholder": "+56 9 1234 5678",
+        "location": "District or location",
+        "locationPlaceholder": "e.g., Quilicura, Industrial Park",
+        "serviceType": "Service type",
+        "servicePlaceholder": "Civil works, maintenance, emergency...",
+        "urgency": "Urgency",
+        "urgencyPlaceholder": "Select an option",
+        "urgencyHigh": "High (24-48h)",
+        "urgencyMedium": "Medium (3-5 days)",
+        "urgencyLow": "Scheduled",
+        "description": "Description or requirement",
+        "descriptionPlaceholder": "Approx. size, materials, or safety requirements.",
+        "submit": "Request technical visit",
+        "sending": "Sending...",
+        "submitted": "Request sent",
+        "successTitle": "Request sent successfully",
+        "successMessage": "We will contact you within 24 hours.",
+        "error": "We could not send the request.",
+        "validationName": "Enter your full name.",
+        "validationPhone": "Enter a valid WhatsApp number.",
+        "validationDescription": "Description cannot exceed 500 characters.",
+        "rateLimit": "Too many requests. Please wait.",
+        "requestId": "Request ID: {{id}}",
+        "whatsappCta": "Contact via WhatsApp",
+        "whatsappHint": "Faster response via WhatsApp",
+        "whatsappMessage": "Hi, I want to coordinate a technical visit for works and maintenance.",
+        "defaultMessage": "Quote request for works and maintenance.",
+        "privacy": "Your data is protected."
+      },
+      "footer": {
+        "credit": "Powered by pymerp.cl"
+      },
+      "modal": {
+        "aboutTitle": "Company description",
+        "missionTitle": "Mission and vision",
+        "close": "Close"
+      }
     },
     "fitnessLayout": {
       "heroKicker": "Guided training",
