--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -431,6 +431,7 @@
       "title": "Menú",
       "about": "Acerca de",
       "services": "Servicios",
+      "projects": "Proyectos",
       "products": "Productos",
       "hours": "Horario",
       "location": "Ubicación",
@@ -577,6 +578,122 @@
         "visitType": "Visita técnica"
       },
       "cityFallback": "tu zona"
+    },
+    "constructionIndustrial": {
+      "heroKicker": "Industrial / Obras",
+      "heroTitleElectrical": "Soluciones eléctricas para obras, industria y agricultura",
+      "heroTitleGeneral": "Soluciones para obras y mantenciones en terreno",
+      "heroSubtitle": "{{service}} · {{region}}",
+      "heroSubtitleService": "Servicios técnicos",
+      "coverageFallback": "Cobertura a coordinar",
+      "badge": {
+        "response": "Respuesta < 24h",
+        "onSite": "Visita técnica en terreno",
+        "compliance": "Cumplimiento normativo"
+      },
+      "heroCtaPrimary": "Solicitar visita técnica",
+      "heroCtaSecondary": "Cotizar por WhatsApp",
+      "heroCard": {
+        "title": "Ficha técnica rápida",
+        "clients": "Tipo de clientes",
+        "clientsValue": "Industrial · Comercial · Obras",
+        "coverage": "Cobertura",
+        "response": "Tiempo de respuesta",
+        "responseValue": "Menos de 24h",
+        "services": "Servicios activos",
+        "attention": "Atención",
+        "attentionValue": "Coordinación previa",
+        "aboutCta": "Ver descripcion",
+        "missionCta": "Ver mision y vision"
+      },
+      "header": {
+        "whatsapp": "WhatsApp"
+      },
+      "nav": {
+        "services": "Servicios",
+        "projects": "Proyectos",
+        "coverage": "Cobertura",
+        "quote": "Cotizar"
+      },
+      "trust": {
+        "safety": "Seguridad y calidad",
+        "field": "Ejecución en terreno",
+        "planning": "Planificación técnica",
+        "warranty": "Garantía y respaldo"
+      },
+      "servicesKicker": "Especialidades",
+      "servicesTitle": "Especialidades técnicas",
+      "servicesSubtitle": "Obra nueva, mantención o emergencia. Coordinamos cuadrillas en terreno.",
+      "servicesCta": "Solicitar visita técnica",
+      "servicesMiniCta": "Cotizar",
+      "processKicker": "Proceso",
+      "processTitle": "Cómo trabajamos",
+      "process": {
+        "step1": "1. Levantamiento / visita técnica",
+        "step2": "2. Cotización y planificación",
+        "step3": "3. Ejecución segura",
+        "step4": "4. Entrega y respaldo"
+      },
+      "projectsKicker": "Proyectos",
+      "projectsTitle": "Proyectos realizados",
+      "projectsSubtitle": "Obras recientes con entrega segura y respaldo técnico.",
+      "projectsCta": "Solicitar visita técnica",
+      "projectsEmpty": "Coordina una visita técnica para revisar necesidades y próximos proyectos.",
+      "projectAlt": "Proyecto en terreno",
+      "projectType": "Obra industrial",
+      "projectResult": "Entrega segura",
+      "coverageKicker": "Cobertura",
+      "coverageTitle": "Cobertura y ubicación",
+      "coverageSubtitle": "Atendemos faenas e instalaciones con coordinación previa.",
+      "coverageNote": "Coordinamos acceso, seguridad y planificación en terreno.",
+      "coverageMapFallback": "Mapa disponible al coordinar.",
+      "coverageChip1": "Industrial",
+      "coverageChip2": "Comercial",
+      "coverageChip3": "Obras",
+      "formKicker": "Cotización",
+      "formTitle": "Coordina tu obra o visita técnica",
+      "formSubtitle": "Respondemos en menos de 24 horas.",
+      "form": {
+        "name": "Nombre completo",
+        "namePlaceholder": "Ej. Carla Ramírez",
+        "phone": "WhatsApp",
+        "phonePlaceholder": "+56 9 1234 5678",
+        "location": "Comuna o ubicación",
+        "locationPlaceholder": "Ej. Quilicura, Parque Industrial",
+        "serviceType": "Tipo de servicio",
+        "servicePlaceholder": "Obra gruesa, mantención, emergencia...",
+        "urgency": "Urgencia",
+        "urgencyPlaceholder": "Selecciona una opción",
+        "urgencyHigh": "Alta (24-48h)",
+        "urgencyMedium": "Media (3-5 días)",
+        "urgencyLow": "Programado",
+        "description": "Descripción o requerimiento",
+        "descriptionPlaceholder": "Metros aprox., materialidad o requerimientos de seguridad.",
+        "submit": "Solicitar visita técnica",
+        "sending": "Enviando...",
+        "submitted": "Solicitud enviada",
+        "successTitle": "Solicitud enviada correctamente",
+        "successMessage": "Te contactaremos en menos de 24 horas.",
+        "error": "No pudimos enviar la solicitud.",
+        "validationName": "Ingresa tu nombre completo.",
+        "validationPhone": "Ingresa un WhatsApp válido.",
+        "validationDescription": "La descripción no puede exceder 500 caracteres.",
+        "rateLimit": "Has enviado muchas solicitudes. Espera un momento.",
+        "requestId": "ID de solicitud: {{id}}",
+        "whatsappCta": "Contactar por WhatsApp",
+        "whatsappHint": "Respuesta más rápida por WhatsApp",
+        "whatsappMessage": "Hola, quiero coordinar una visita técnica para obras y mantenciones.",
+        "defaultMessage": "Solicitud de cotización para obra y mantención.",
+        "privacy": "Tus datos están protegidos."
+      },
+      "footer": {
+        "credit": "Desarrollado por pymerp.cl"
+      },
+      "modal": {
+        "aboutTitle": "Descripcion de la empresa",
+        "missionTitle": "Mision y vision",
+        "close": "Cerrar"
+      }
     },
     "fitnessLayout": {
       "heroKicker": "Entrenamiento dirigido",
