feat: implementar personalizacion completa para construccion e industrial con proyectos multimedia

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -697,7 +697,8 @@
       "modal": {
         "aboutTitle": "Company description",
         "missionTitle": "Mission and vision",
-        "close": "Close"
+        "close": "Close",
+        "projectTitle": "Project detail"
       }
     },
     "fitnessLayout": {
