--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -840,7 +840,9 @@
         "friday": "Friday",
         "saturday": "Saturday",
         "sunday": "Sunday"
-      }
+      },
+      "daysWeekdays": "Mon – Fri",
+      "closed": "Closed"
     },
     "restaurantsLayout": {
       "heroKicker": "Fresh and fast",
